add PT-BR localisation

--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -1,5 +1,4 @@
-; THESE ARE GENERATED FILES, DO NOT EDIT DIRECTLY!
-; USE THE LOCALIZATION DASHBOARD IN THE UNREAL EDITOR TO EDIT THE CONFIGURATION
+;METADATA=(Diff=true, UseCommands=true)
 [CommonSettings]
 SourcePath=Content/Localization/Game
 DestinationPath=Content/Localization/Game
@@ -11,14 +10,16 @@ CulturesToGenerate=pt
 
 [GatherTextStep0]
 CommandletClass=GatherTextFromAssets
-IncludePathFilters=Content/*
+IncludePathFilters=Content/Blueprints/*
+IncludePathFilters=Content/Data/*
 ExcludePathFilters=Content/Localization/*
 ExcludePathFilters=Content/L10N/*
+ExcludePathFilters=Content/Blueprints/UI/Data/*
 PackageFileNameFilters=*.umap
 PackageFileNameFilters=*.uasset
 ShouldExcludeDerivedClasses=false
 ShouldGatherFromEditorOnlyData=false
-SkipGatherCache=true
+SkipGatherCache=false
 
 [GatherTextStep1]
 CommandletClass=GenerateGatherManifest
